--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="project-card">
     <h3>🚗 Poole (App) – Vehicle Tracking Application</h3>
     <p>
-      Developed Passenger and Driver apps from scratch with live vehicle tracking
+      Developed Passenger and Driver apps from scratch with <b>live vehicle tracking</b>
       using Firebase Real-Time Database. Ensured smooth production support and hotfix releases.
     </p>
     <ul>
@@ -70,7 +70,7 @@
       <li>Integrated Firebase Real-Time Database for real-time tracking</li>
       <li>Resolved production issues and delivered hotfix updates</li>
       <li>Maintained clean and scalable Swift codebase</li>
-      <li>Tech Stack: Swift, Firebase, Real-Time Database</li>
+      <li><b>Tech Stack:</b> Swift, Firebase, Real-Time Database</li>
     </ul>
   </div>
 
@@ -84,7 +84,7 @@
       <li>Integrated GPT-4 Vision API for plant detection</li>
       <li>Implemented disease identification and recommendations</li>
       <li>Designed modern UI using SwiftUI</li>
-      <li>Tech Stack: SwiftUI, GPT-4 Vision API</li>
+      <li><b>Tech Stack:</b> SwiftUI, GPT-4 Vision API, Flutter</li>
     </ul>
   </div>
 
@@ -98,7 +98,7 @@
       <li>User app for browsing restaurants and placing orders</li>
       <li>Manager app to review and approve orders</li>
       <li>Implemented order top-up functionality</li>
-      <li>Tech Stack: Swift</li>
+      <li><b>Tech Stack:</b> Swift</li>
     </ul>
   </div>
 
@@ -112,7 +112,7 @@
       <li>Audio playback for Quran Ayat</li>
       <li>Rabbana section with audio support</li>
       <li>Integrated Qibla Compass feature</li>
-      <li>Tech Stack: Swift, SwiftUI</li>
+      <li><b>Tech Stack:</b> Swift, SwiftUI</li>
     </ul>
   </div>
 
@@ -120,13 +120,13 @@
     <h3>🎨 TeenArtPass – Maps & Animation App</h3>
     <p>
       Contributed to core product development by enhancing modules,
-      implementing Google Maps, and writing optimized MVC code.
+      implementing Google Maps and writing optimized MVC code.
     </p>
     <ul>
       <li>Integrated Google Maps functionality</li>
       <li>Added new features and improved performance</li>
       <li>Implemented clean MVC architecture</li>
-      <li>Tech Stack: Swift</li>
+      <li><b>Tech Stack:</b> Swift</li>
     </ul>
   </div>
 
@@ -140,7 +140,7 @@
       <li>Used Realm DB for local data management</li>
       <li>Created adaptive layouts for iPad</li>
       <li>Managed full App Store deployment process</li>
-      <li>Tech Stack: Swift</li>
+      <li><b>Tech Stack:</b> Swift</li>
     </ul>
   </div>
 
@@ -148,14 +148,14 @@
     <h3>🚚 Haulit – Logistics & Tracking App</h3>
     <p>
       Implemented real-time tracking, payment gateway integration,
-      and chat module for logistics management.
+      and a chat module for logistics management.
     </p>
     <ul>
       <li>Integrated Firebase tracking and push notifications</li>
       <li>Implemented Braintree payment gateway</li>
       <li>Integrated Google Maps for live tracking</li>
       <li>Developed in-app chat module</li>
-      <li>Tech Stack: Swift</li>
+      <li><b>Tech Stack:</b> Swift</li>
     </ul>
   </div>
 
@@ -170,7 +170,7 @@
       <li>Integrated social logins (Facebook, Twitter, Google)</li>
       <li>Added Braintree payments and Firebase push notifications</li>
       <li>Supported multi-orientation layouts</li>
-      <li>Tech Stack: Swift</li>
+      <li><b>Tech Stack:</b> Swift</li>
     </ul>
   </div>
 
@@ -184,7 +184,7 @@
       <li>Implemented cart system using SQLite</li>
       <li>Integrated Google Analytics and Tag Manager</li>
       <li>Tracked user interaction and order behavior</li>
-      <li>Tech Stack: Objective-C, Swift</li>
+      <li><b>Tech Stack:</b> Objective-C, Swift</li>
     </ul>
   </div>
 
@@ -198,7 +198,7 @@
       <li>Implemented client-requested features</li>
       <li>Fixed QA-reported bugs</li>
       <li>Provided continuous upgrade support</li>
-      <li>Tech Stack: Objective-C</li>
+      <li><b>Tech Stack:</b> Objective-C</li>
     </ul>
   </div>
 
@@ -212,7 +212,7 @@
       <li>Implemented Salesforce login integration</li>
       <li>Added audio and video functionality</li>
       <li>Maintained legacy Objective-C codebase</li>
-      <li>Tech Stack: Objective-C</li>
+      <li><b>Tech Stack:</b> Objective-C</li>
     </ul>
   </div>
 
@@ -241,7 +241,7 @@
 </main>
 
 <footer>
-  <p>© 2026 Muhammad Umar Farooq</p>
+  <p>© 2026 <b>Muhammad Umar Farooq</b></p>
 </footer>
 
 <script src="script.js"></script>
