--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 <section class="section slide-up">
   <h2>Technology Stack</h2>
   <div class="tech-grid">
-    <div class="tech"><i class="fa-brands fa-apple"></i> SwiftUI / UIKit / Objective-C</div>
-    <div class="tech"><i class="fa-solid fa-network-wired"></i> Alamofire</div>
-    <div class="tech"><i class="fa-solid fa-bolt"></i> Firebase</div>
-    <div class="tech"><i class="fa-solid fa-sync-alt"></i> RxSwift</div>
-    <div class="tech"><i class="fa-solid fa-layer-group"></i> Combine</div>
-    <div class="tech"><i class="fa-brands fa-google"></i> Flutter</div>
+    <div class="tech"><i class="fa-brands fa-swift"></i> SwiftUI / UIKit / Objective-C</div>
+    <div class="tech"><i class="fa-sharp fa-solid fa-a"></i> Alamofire</div>
+    <div class="tech"><i class="fa-duotone fa-solid fa-meteor"></i> Firebase</div>
+    <div class="tech"><i class="fa-brands fa-apple"></i> RxSwift</div>
+    <div class="tech"><i class="fa-brands fa-swift"></i> Combine</div>
+    <div class="tech"><i class="fa-brands fa-flutter"></i> Flutter</div>
   </div>
 </section>
 
