--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="tech"><i class="fa-duotone fa-solid fa-meteor"></i> Firebase</div>
     <div class="tech"><i class="fa-brands fa-apple"></i> RxSwift</div>
     <div class="tech"><i class="fa-brands fa-swift"></i> Combine</div>
-    <div class="tech"><i class="fa-brands fa-flutter"></i> Flutter</div>
+    <div class="tech"><i class="fa-brands fa-dart-lang"></i> Flutter</div>
   </div>
 </section>
 
