--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <li>Used Realm DB for local data management</li>
       <li>Created adaptive layouts for iPad</li>
       <li>Managed full App Store deployment process</li>
-      <li><b>Tech Stack:</b> Swift</li>
+      <li><b>Tech Stack:</b> Swift, Realm DB</li>
     </ul>
   </div>
 
