--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 <section class="section slide-up">
   <h2>About Me</h2>
   <p>
-    I am a Senior Mobile Developer with 10+ years of experience building high-quality, scalable, and user-friendly mobile applications. I specialize in iOS development using SwiftUI and UIKit, and I also build cross-platform apps using Flutter.  I design and develop robust, real-time, and performance-driven applications that deliver smooth user experiences. My daily work includes creating modern mobile architectures, integrating APIs, improving app performance, and maintaining clean, reusable code.
+    I am a Senior Mobile Developer with <b>10+ years</b> of experience building high-quality, scalable, and user-friendly mobile applications. 
+    I specialize in iOS development using SwiftUI, UIKit & Objective-C, and I also build cross-platform apps using Flutter.  
+    I design and develop robust, real-time, and performance-driven applications that deliver smooth user experiences & reusable code.
   </p>
 </section>
 
