--- a/index.html
+++ b/index.html
@@ -220,6 +220,21 @@
 
 </section>
 
+  <!-- EDUCATION -->
+<section class="section slide-up">
+  <h2>Education (MOFA and Embassy Attested) </h2>
+  <div class="education-item">
+    <h3>B.S. Software Engineering</h3>
+    <p><strong>Karachi University, Pakistan</strong> | JAN 2010 – DEC 2013</p>
+    <p>Major Courses: Software Development, Data Structures, Operating Systems & Networking.</p>
+  </div>
+  <div class="education-item">
+    <h3>Diploma in Entrepreneurship & SME Management</h3>
+    <p><strong>Virtual University of Pakistan</strong> | JAN 2020 – DEC 2020</p>
+    <p>Major Courses: Entrepreneurship, SME Management, Communication Skills.</p>
+  </div>
+</section>
+  
 <!-- YOUTUBE -->
 <section class="section slide-up">
   <h2>YouTube Contribution</h2>
