--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <div class="hero-contact">
     <span><i class="fa-solid fa-envelope"></i> mr.khan21991@gmail.com</span>
-    <span><i class="fa-solid fa-phone"></i> +974 11110000</span>
+    <span><i class="fa-solid fa-phone"></i> +974 55179747 (Watsapp)</span>
     <span><i class="fa-solid fa-location-dot"></i> Doha, Qatar</span>
   </div>
 </header>
