--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- HERO -->
 <header class="hero fade-in show">
   <img src="Umar_Farooq_White.jpg" alt="Muhammad Umar Farooq" class="profile-img">
-  <h1>Muhammad Umar Farooq</h1>
+  <h1>Muhammad Umer Farooq</h1>
   <p class="hero-subtitle">Senior Software Engineer</p>
   <p class="hero-desc">SwiftUI • UIKit • iOS Developer • Flutter</p>
 
