--- a/index.html
+++ b/index.html
@@ -106,17 +106,21 @@
 
   <div class="project-card">
     <h3>🕌 Islamic Bundle – Quran & Qibla App</h3>
-    <p>
-      Developed an Islamic mobile app featuring Quran audio for each Ayat,
-      Rabbana section, and Qibla Compass integration.
-    </p>
-    <ul>
-      <li>Audio playback for Quran Ayat</li>
-      <li>Rabbana section with audio support</li>
-      <li>Integrated Qibla Compass feature</li>
-      <li><b>Tech Stack:</b> Swift, SwiftUI</li>
-    </ul>
-  </div>
+<p>
+  Developed an Islamic mobile app featuring Quran audio for each Ayat,
+  Rabbana section, and Qibla Compass integration.
+</p>
+<ul>
+  <li>Audio playback for Quran Ayat</li>
+  <li>Rabbana section with audio support</li>
+  <li>Integrated Qibla Compass feature</li>
+  <li><b>Tech Stack:</b> Swift, SwiftUI</li>
+  <li>
+    <b>App Links:</b> 
+    <a href="https://play.google.com/store/apps/details?id=com.inabia.islamicbundle" target="_blank">Google Play</a> | 
+    <a href="https://apps.apple.com/us/app/islamic-bundle-athan-time-pro/id1559513416" target="_blank">App Store</a>
+  </li>
+</ul>
 
   <div class="project-card">
     <h3>🎨 TeenArtPass – Maps & Animation App</h3>
