--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </ul>
   </div>
 
-  <div class="app-section">
+  <div class="project-card">
   <h3>🕌 Islamic Bundle – Quran & Qibla App</h3>
   <p>
     Developed an Islamic mobile app featuring Quran audio for each Ayat,
