--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
       <li>Added new features and improved performance</li>
       <li>Implemented clean MVC architecture</li>
       <li><b>Tech Stack:</b> Swift</li>
+      <li>
+      <b>App Link:</b> 
+      <a href="https://teenartspass.urbangateways.org/our-app/" target="_blank">Teen Art Pass</a> 
+    </li>
     </ul>
   </div>
 
@@ -148,6 +152,10 @@
       <li>Created adaptive layouts for iPad</li>
       <li>Managed full App Store deployment process</li>
       <li><b>Tech Stack:</b> Swift, Realm DB</li>
+      <li>
+      <b>App Link:</b> 
+      <a href="http://mygainsafe.com/" target="_blank">GainSafe app </a>
+    </li>
     </ul>
   </div>
 
@@ -163,6 +171,10 @@
       <li>Integrated Google Maps for live tracking</li>
       <li>Developed in-app chat module</li>
       <li><b>Tech Stack:</b> Swift</li>
+      <li>
+      <b>App Link:</b> 
+      <a href="https://apps.apple.com/in/app/haulit/id6450218410" target="_blank">App Store</a>
+    </li>
     </ul>
   </div>
 
