--- a/index.html
+++ b/index.html
@@ -86,21 +86,11 @@
       <li>Integrated GPT-4 Vision API for plant detection</li>
       <li>Implemented disease identification and recommendations</li>
       <li>Designed modern UI using SwiftUI</li>
-      <li><b>Tech Stack:</b> SwiftUI, GPT-4 Vision API, Flutter</li>
-    </ul>
-  </div>
-
-  <div class="project-card">
-    <h3>🍽️ Delyt – Restaurant Management System</h3>
-    <p>
-      Built a complete Restaurant Management System with User and Manager apps
-      for order placement, approval, and management.
-    </p>
-    <ul>
-      <li>User app for browsing restaurants and placing orders</li>
-      <li>Manager app to review and approve orders</li>
-      <li>Implemented order top-up functionality</li>
-      <li><b>Tech Stack:</b> Swift</li>
+      <li><b>Tech Stack:</b> SwiftUI, Flutter, GPT-4 Vision API</li>
+      <li>
+      <b>App Link:</b> 
+      <a href="https://github.com/umarfarooq21/Plants_Disease_Detector.git" target="_blank">Plant Detection App</a> 
+    </li>
     </ul>
   </div>
 
@@ -122,6 +112,20 @@
     </li>
   </ul>
 </div>
+
+  <div class="project-card">
+    <h3>🍽️ Delyt – Restaurant Management System</h3>
+    <p>
+      Built a complete Restaurant Management System with User and Manager apps
+      for order placement, approval, and management.
+    </p>
+    <ul>
+      <li>User app for browsing restaurants and placing orders</li>
+      <li>Manager app to review and approve orders</li>
+      <li>Implemented order top-up functionality</li>
+      <li><b>Tech Stack:</b> Swift</li>
+    </ul>
+  </div>
 
   <div class="project-card">
     <h3>🎨 TeenArtPass – Maps & Animation App</h3>
